@@ -1,6 +1,7 @@
 v 2.0.0
 =======
 Support for arbitrary 'database' and 'admin' headers throughout the object chain
+Removed "raw_options" attribute from CollectionOptions class (redundant w.r.t `CollectionDescriptor.raw_descriptor`)
 Reworked the options system:
     - an APIOptions object inherited at each "spawn" operation, with overrides
     - environment-dependent defaults if nothing supplied
